# jewel

./: .gitignore  README.md  pyproject.toml
jewel/: __init__.py  __main__.py
jewel/formats/: __init__.py
shine/: __init__.py  __main__.py
shine/formats/: __init__.py
snippyt/: __init__.py  __main__.py
snippyt/formats/: __init__.py
test/: __init__.py
