[tool.poetry]
name = "snippyt"
version = "0.1.0"
description = "Command-line tool for creating Python code snippets."
authors = ["Aaron Stephens <aaronjst93@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
