[tool.poetry]
name = "shine"
version = "0.1.0"
description = "Rich Python snippets. Let your code shine!"
authors = ["Aaron Stephens <aaronjst93@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.4"
mypy = "^0.942"

[tool.poetry.scripts]
shine = "shine.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
